--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,13 @@
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "vuetify": "^2.6.1",
-    "webpack": "^5.71.0"
+    "vuetify": "^2.6.1"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.3",
     "@testing-library/vue": "^6.5.1",
     "jest": "^26.6.3",
-    "vue-jest": "^3.0.7"
+    "vue-jest": "^3.0.7",
+    "webpack": "^4.46.0"
   }
 }
