--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@vue/compiler-dom": "^3.2.31",
     "core-js": "^3.19.3",
     "moment": "^2.29.1",
     "nuxt": "^2.15.8",
@@ -21,6 +22,8 @@
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.3",
     "@testing-library/vue": "^6.5.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "vue-jest": "^3.0.7",
     "webpack": "^4.46.0"
