--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "@vue/compiler-dom": "^3.2.31",
+    "axios": "^0.26.1",
     "core-js": "^3.19.3",
     "moment": "^2.29.1",
     "nuxt": "^2.15.8",
